# stremio-linux-shell

./: Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
.github/: build.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml
data/: com.stremio.Stremio.gschema.xml  com.stremio.Stremio.metainfo.xml  com.stremio.Stremio.service  stremio.sh
flatpak/: build-release.sh  build.sh  com.stremio.Stremio.Devel.json  com.stremio.Stremio.json
po/: es.po  fr.po
src/: config.rs  constants.rs  discord.rs  ipc.rs  main.rs  mpris.rs  server.rs  tray.rs  utils.rs
src/app/: adapters.rs  config.rs  imp.rs  mod.rs  style.css  utils.rs
src/app/dialogs/: mod.rs
src/app/dialogs/preferences/: imp.rs  mod.rs  preferences.xml
src/app/discord/: config.rs  imp.rs  ipc.rs  mod.rs  worker.rs
src/app/ipc/: event.rs  mod.rs  preload.js  request.rs  response.rs
src/app/mpris/: imp.rs  mod.rs
src/app/preferences/: imp.rs  preferences.xml
src/app/tray/: imp.rs
src/app/video/: config.rs  imp.rs  mod.rs
src/app/webview/: gl.rs  imp.rs  mod.rs
src/app/window/: imp.rs  mod.rs  window.ui
src/chromium/: config.rs  ipc.js  mod.rs  types.rs
src/chromium/app/: browser_process_handler.rs  mod.rs
src/chromium/app/client/: load_handler.rs  mod.rs  permission_handler.rs  render_handler.rs
src/mpris/: adapter.rs  metadata.rs  service.rs
src/player/: constants.rs  mod.rs
src/shared/: mod.rs  types.rs
src/shared/ipc/: event.rs  request.rs  response.rs
src/shared/renderer/: mod.rs  shader.frag  utils.rs
src/webview/: mod.rs  preload.js
src/webview/app/: browser_process_handler.rs  mod.rs
src/webview/app/client/: keyboard_handler.rs  lifespan_handler.rs  render_handler.rs
