[package]
name = "stremio-linux-shell"
version = "1.1.2"
description = "Freedom to Stream"
authors = ["Stremio"]
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-linux-shell"
license = "GPL-3.0-only"
edition = "2024"

[features]
offline-build = []

[dependencies]
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_22"] }
gdk-wayland = { package = "gdk4-wayland", version = "0.11.4", features = ["v4_20", "wayland_crate"] }
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_9"] }
webkit = { package = "webkit6", version = "0.6.1", features = ["v2_52"] }
ashpd = { version = "0.13.12", features = ["background", "gtk4", "inhibit", "open_uri"] }
ksni = "0.3.5"
mpris-server = "0.10.0"
clap = { version = "4.6.1", features = ["derive"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
tokio = { version = "1.52.3", features = ["full"] }
libloading = "0.9.0"
epoxy = "0.1.0"
flume = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
serde_json = "1.0.150"
itertools = "0.15.0"
libmpv2 = "5.0.3"
image = "0.25.10"
chrono = "0.4.45"
anyhow = "1.0.103"
url = "2.5.8"
dirs = "6.0.0"
base64 = "0.22.1"

[build-dependencies]
anyhow = "1.0.103"
dirs = "6.0.0"

[package.metadata.deb]
name = "stremio"
depends = [
    "libgtk-4",
    "libadwaita-1",
    "libwebkitgtk-6.0",
    "libmpv2",
    "nodejs",
]
assets = [
    ["target/release/stremio-linux-shell", "/usr/libexec/stremio/stremio", "755"],
    ["data/server.js", "/usr/libexec/stremio/server.js", "644"],
    ["data/stremio.sh", "/usr/bin/stremio", "755"],
    ["data/com.stremio.Stremio.desktop", "/usr/share/applications/com.stremio.Stremio.desktop", "644"],
    ["data/com.stremio.Stremio.service", "/usr/share/dbus-1/services/com.stremio.Stremio.service", "644"],
    ["data/com.stremio.Stremio.metainfo.xml", "/usr/share/metainfo/com.stremio.Stremio.metainfo.xml", "644"],
    ["data/com.stremio.Stremio.gschema.xml", "/usr/share/glib-2.0/schemas/com.stremio.Stremio.gschema.xml", "644"],
    ["data/icons/com.stremio.Stremio.svg", "/usr/share/icons/hicolor/scalable/apps/com.stremio.Stremio.svg", "644"],
    ["po/es/LC_MESSAGES/stremio.mo", "/usr/share/locale/es/LC_MESSAGES/stremio.mo", "644"],
    ["po/fr/LC_MESSAGES/stremio.mo", "/usr/share/locale/fr/LC_MESSAGES/stremio.mo", "644"],
    ["LICENSE", "/usr/share/licenses/stremio/LICENSE", "644"],
]