[package]
name = "stremio-linux-shell"
version = "1.1.3"
description = "Freedom to Stream"
authors = ["Stremio"]
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-linux-shell"
license = "GPL-3.0-only"
edition = "2024"

[features]
offline-build = []

[dependencies]
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_22"] }
gdk-wayland = { package = "gdk4-wayland", version = "0.11.4", features = ["v4_20", "wayland_crate"] }
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_9"] }
webkit = { package = "webkit6", version = "0.6.1", features = ["v2_52"] }
ashpd = { version = "0.13.12", features = ["background", "gtk4", "inhibit", "open_uri"] }
ksni = "0.3.5"
mpris-server = "0.10.0"
clap = { version = "4.6.1", features = ["derive"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
tokio = { version = "1.52.3", features = ["full"] }
libloading = "0.9.0"
epoxy = "0.1.0"
flume = "0.12.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = "1.0.228"
serde_json = "1.0.150"
itertools = "0.15.0"
libmpv2 = "5.0.3"
image = "0.25.10"
chrono = "0.4.45"
anyhow = "1.0.103"
url = "2.5.8"
dirs = "6.0.0"
base64 = "0.22.1"
libc = "0.2.189"

[build-dependencies]
anyhow = "1.0.103"
dirs = "6.0.0"
